# CHOP

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
chop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: chop_gnm_vnt.yaml  chop_nomad_vnt.yaml  chop_vint_vnt.yaml  dataset_config.yaml
datasets/: __init__.py  chop_dataset.py  data_config.yaml  omnivla_chop_dataset.py  omnivla_chop_gnm_compat.py  preprocess_scand_a.py  preprocess_scand_a_chop.py  vint_gnm_chop_dataset.py  visualnav_transformer_dataset.py
deployment/: model_run.py  model_run_tmp.py  path_manager.py  planner_dwa_ros2.py  planner_omnivla_ros2.py  planner_pid_ros2.py  planner_ros2.py  planner_state_manager.py
deployment/utils/: visualization.py
evaluation/: alignment_evaluate.py  base_evaluator.py  eval_runner.py  goal_distance_evaluate.py  proximity_evaluate.py  scand_obs_proximity_evaluate.py
sensors/: minimal_publisher.py  realsense_publisher.py
testing/: test_omnivla_chop_dataloader.py
training/: finetune-omnivla.py  finetune-visualnavformer.py
