[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chop"
authors = [
    {name = "Gershom Seneviratne"}
]
description = "CHOP: Counterfactual Human Preference Labels Improve Obstacle Avoidance in Visuomotor Navigation Policies"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["vision-language-action model", "vision-based navigation", "robot learning", "policy alignment", "Counterfactual alignment"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


dependencies = [
    "accelerate>=0.25.0",
    "draccus==0.8.0",
    "einops",
    # "flash_attn==2.5.5",      # Here for documentation -- install *AFTER* editable install (follow README)
    "huggingface_hub==0.29.1",
    "json-numpy",
    "jsonlines",
    "matplotlib",
    "peft==0.11.1",
    "protobuf",
    "rich",
    "sentencepiece==0.1.99",
    "timm==0.9.10",
    "tokenizers==0.19.1",
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    "warmup-scheduler @ git+https://github.com/ildoonet/pytorch-gradual-warmup-lr.git",
    "transformers @ git+https://github.com/moojink/transformers-openvla-oft.git",  # IMPORTANT: Use this fork for bidirectional attn (for parallel decoding)
    "wandb",
    "tensorflow==2.15.0",
    "tensorflow_datasets==4.9.3",
    "tensorflow_graphics==2021.12.3",
    "dlimp @ git+https://github.com/moojink/dlimp_openvla",
    "diffusers==0.11.1",
    "imageio",
    "uvicorn",
    "fastapi",
    "utm",
    "lmdb",
    "zarr",
    "datasets",
    "efficientnet_pytorch",
    "av",
    "opencv-python==4.6.0.66", 
    "prettytable"
]

[tool.setuptools]
# Make the internal code importable (e.g., `import policy_sources`)
packages = ["datasets", "testing", "policy_sources", "evaluation"]
